--- a/frontend/src/main/resources/META-INF/resources/admin.xhtml
+++ b/frontend/src/main/resources/META-INF/resources/admin.xhtml
@@ -23,7 +23,7 @@
         <div>
             <h3>Categories</h3>
 
-            <h:dataTable var="category" value="#{forumController.allCategories}">
+            <h:dataTable var="category" value="#{categoryController.allCategories}">
                 <h:column>
                     <f:facet name="header">Id</f:facet>
                     <h:outputText value="#{category.id}"/>
@@ -66,7 +66,7 @@
         <div>
             <h3>Posts</h3>
 
-            <h:dataTable var="post" value="#{forumController.allPosts}">
+            <h:dataTable var="post" value="#{postController.allPosts}">
                 <h:column>
                     <f:facet name="header">Id</f:facet>
                     <h:outputText value="#{post.id}"/>
@@ -124,7 +124,7 @@
 
                         <td>
                             <h:selectOneMenu value="#{adminController.adminPostCategory}">
-                                <c:forEach var="category" items="#{forumController.allCategories}">
+                                <c:forEach var="category" items="#{categoryController.allCategories}">
                                     <f:selectItem itemValue="#{category.id}" itemLabel="#{category.name}"/>
                                 </c:forEach>
                             </h:selectOneMenu>
@@ -149,7 +149,7 @@
 
         <div>
             <h3>Comments</h3>
-            <h:dataTable var="comment" value="#{forumController.allComments}">
+            <h:dataTable var="comment" value="#{commentsController.allComments}">
                 <h:column>
                     <f:facet name="header">Id</f:facet>
                     <h:outputText value="#{comment.id}"/>
@@ -189,7 +189,7 @@
 
                         <td>
                             <h:selectOneMenu value="#{adminController.adminCommentPost}">
-                                <c:forEach var="post" items="#{forumController.allPosts}">
+                                <c:forEach var="post" items="#{postController.allPosts}">
                                     <f:selectItem itemValue="#{post.id}" itemLabel="#{post.title}"/>
                                 </c:forEach>
                             </h:selectOneMenu>
